--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.2
 joblib==1.2.0
 lxml==4.9.1
 MarkupSafe==2.1.1
+nltk==3.7
 numpy==1.23.4
 pandas==1.5.1
 pandas-datareader==0.10.0
@@ -30,6 +31,7 @@ six==1.16.0
 sklearn==0.0.post1
 tenacity==8.1.0
 threadpoolctl==3.1.0
+tqdm==4.64.1
 urllib3==1.26.12
 Werkzeug==2.2.2
 word2number==1.1
